--- a/consensus/src/client/test/Default.toml
+++ b/consensus/src/client/test/Default.toml
@@ -21,3 +21,7 @@ id = 3
 address = "127.0.0.1"
 port = "8004"
 
+[bench_config]
+# Should send about 100*1000/50 = 2000 tx/s
+txs_per_burst = 100
+burst_interval_ms = 50
