--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -14,6 +14,8 @@ consensus = { package = "leto", path = "../consensus" }
 signal-hook = "0"
 serde_json = "1"
 fnv = "1"
+serde = "1"
+bincode = "1"
 
 [dependencies.clap]
 version = "4"
@@ -28,3 +30,7 @@ features = [
 [dependencies.mempool]
 package = "libmempool-rs"
 git = "https://github.com/libdist-rs/libmempool-rs.git"
+
+[dependencies.crypto]
+package = "libcrypto"
+git = "https://github.com/libdist-rs/libcrypto-rs.git"
