--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -16,6 +16,7 @@ serde_json = "1"
 fnv = "1"
 serde = "1"
 bincode = "1"
+base64 = "0"
 
 [dependencies.clap]
 version = "4"
@@ -34,3 +35,7 @@ git = "https://github.com/libdist-rs/libmempool-rs.git"
 [dependencies.crypto]
 package = "libcrypto"
 git = "https://github.com/libdist-rs/libcrypto-rs.git"
+
+[dependencies.network]
+package = "network"
+git = "https://github.com/libdist-rs/libnet-rs.git"
